--- a/styles/css/vtex.minicart.css
+++ b/styles/css/vtex.minicart.css
@@ -3,11 +3,11 @@
 }
 
 .minicartIconContainer {
-  color: #fff;
+  color: #142032;
 }
 
 .closeIconContainer::before {
-  content: "My cart";
+  content: "Carrinho";
   font-size: 24px;
   line-height: 32px;
   font-family: Roboto;
