--- a/styles/css/vtex.rich-text.css
+++ b/styles/css/vtex.rich-text.css
@@ -31,7 +31,7 @@
   display: flex;
   align-items: center;
   color: var(--b2b-header-blue-medium);
-  background-color: #007f7f;
+  background-color: var(--fresh-blue);
   border-radius: 8px;
   padding: 0 1rem;
 }
@@ -56,17 +56,16 @@
 }
 
 .paragraph--demo-store-warning::before {
-  content: "";
-  background: url("data:image/svg+xml,%3Csvg width='25' height='24' viewBox='0 0 25 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M13.8333 12.6667V10.6667H11.1667H9.16667V12.6667H11.1667V15.3333H9.16667V17.3333H11.1667H13.8333H15.8333V15.3333H13.8333V12.6667ZM12.5 9.33333C13.604 9.33333 14.5 8.43733 14.5 7.33333C14.5 6.22933 13.604 5.33333 12.5 5.33333C11.396 5.33333 10.5 6.22933 10.5 7.33333C10.5 8.43733 11.396 9.33333 12.5 9.33333ZM12.5 22C6.98533 22 2.5 17.5147 2.5 12C2.5 6.48533 6.98533 2 12.5 2C18.0147 2 22.5 6.48533 22.5 12C22.5 17.5147 18.0147 22 12.5 22ZM12.5 0C5.872 0 0.5 5.372 0.5 12C0.5 18.628 5.872 24 12.5 24C19.128 24 24.5 18.628 24.5 12C24.5 5.372 19.128 0 12.5 0Z' fill='%23007F7F'/%3E%3Cmask id='mask0_936_12631' style='mask-type:alpha' maskUnits='userSpaceOnUse' x='0' y='0' width='25' height='24'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M13.8333 12.6667V10.6667H11.1667H9.16667V12.6667H11.1667V15.3333H9.16667V17.3333H11.1667H13.8333H15.8333V15.3333H13.8333V12.6667ZM12.5 9.33333C13.604 9.33333 14.5 8.43733 14.5 7.33333C14.5 6.22933 13.604 5.33333 12.5 5.33333C11.396 5.33333 10.5 6.22933 10.5 7.33333C10.5 8.43733 11.396 9.33333 12.5 9.33333ZM12.5 22C6.98533 22 2.5 17.5147 2.5 12C2.5 6.48533 6.98533 2 12.5 2C18.0147 2 22.5 6.48533 22.5 12C22.5 17.5147 18.0147 22 12.5 22ZM12.5 0C5.872 0 0.5 5.372 0.5 12C0.5 18.628 5.872 24 12.5 24C19.128 24 24.5 18.628 24.5 12C24.5 5.372 19.128 0 12.5 0Z' fill='white'/%3E%3C/mask%3E%3Cg mask='url(%23mask0_936_12631)'%3E%3Crect x='-19.5' y='-20' width='64' height='64' fill='%23007F7F'/%3E%3C/g%3E%3C/svg%3E")
-    no-repeat;
+  content: url("data:image/svg+xml,%3Csvg width='25' height='25' viewBox='0 0 25 25' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M13.8333 12.6667V10.6667H11.1667H9.16667V12.6667H11.1667V15.3333H9.16667V17.3333H11.1667H13.8333H15.8333V15.3333H13.8333V12.6667ZM12.5 9.33333C13.604 9.33333 14.5 8.43733 14.5 7.33333C14.5 6.22933 13.604 5.33333 12.5 5.33333C11.396 5.33333 10.5 6.22933 10.5 7.33333C10.5 8.43733 11.396 9.33333 12.5 9.33333ZM12.5 22C6.98533 22 2.5 17.5147 2.5 12C2.5 6.48533 6.98533 2 12.5 2C18.0147 2 22.5 6.48533 22.5 12C22.5 17.5147 18.0147 22 12.5 22ZM12.5 0C5.872 0 0.5 5.372 0.5 12C0.5 18.628 5.872 24 12.5 24C19.128 24 24.5 18.628 24.5 12C24.5 5.372 19.128 0 12.5 0Z' fill='%23007F7F'/%3E%3Cmask id='mask0_936_12631' style='mask-type:alpha' maskUnits='userSpaceOnUse' x='0' y='0' width='25' height='24'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M13.8333 12.6667V10.6667H11.1667H9.16667V12.6667H11.1667V15.3333H9.16667V17.3333H11.1667H13.8333H15.8333V15.3333H13.8333V12.6667ZM12.5 9.33333C13.604 9.33333 14.5 8.43733 14.5 7.33333C14.5 6.22933 13.604 5.33333 12.5 5.33333C11.396 5.33333 10.5 6.22933 10.5 7.33333C10.5 8.43733 11.396 9.33333 12.5 9.33333ZM12.5 22C6.98533 22 2.5 17.5147 2.5 12C2.5 6.48533 6.98533 2 12.5 2C18.0147 2 22.5 6.48533 22.5 12C22.5 17.5147 18.0147 22 12.5 22ZM12.5 0C5.872 0 0.5 5.372 0.5 12C0.5 18.628 5.872 24 12.5 24C19.128 24 24.5 18.628 24.5 12C24.5 5.372 19.128 0 12.5 0Z' fill='white'/%3E%3C/mask%3E%3Cg mask='url(%23mask0_936_12631)'%3E%3Crect x='-19.5' y='-20' width='64' height='64' fill='%23007F7F'/%3E%3C/g%3E%3C/svg%3E");
   margin-right: 0.25rem;
   width: 25px;
+  height: 25px;
 }
 
 /* END - Header */
 /* BEGIN - Generic */
 
-.headingLevel3--sectionTitle,
+/* .headingLevel3--sectionTitle,
 .headingLevel3--shopByCategoryTitle {
   font-size: 24px;
   font-weight: 500;
@@ -74,7 +73,7 @@
   color: #000000;
   margin: 0;
   margin-bottom: 16px;
-}
+} */
 
 .wrapper--alsoView,
 .wrapper--sectionTitle {
@@ -375,9 +374,9 @@
     margin-bottom: 40px;
   }
 
-  .wrapper--shopByCategoryTitle {
+  /* .wrapper--shopByCategoryTitle {
     margin: 0px auto;
-  }
+  } */
 
   .headingLevel3--sectionTitle {
     border: none;
