--- a/styles/css/vtex.product-summary.css
+++ b/styles/css/vtex.product-summary.css
@@ -1,6 +1,5 @@
 .container--summaryComplete {
-  position: relative;
-  max-width: 240px;
+  text-align: left;
   border: 1px solid transparent;
   border-radius: 8px;
   padding: 20px;
@@ -12,7 +11,7 @@
 }
 
 .container--summaryComplete:hover {
-  border-color: #dee7ef;
+  border-color: var(--fresh-blue);
 }
 
 .container--summaryComplete:hover
@@ -80,15 +79,16 @@
 }
 
 .container--summaryComplete .productNameContainer {
-  text-align: left;
-  font-size: 16px;
-  line-height: 22px;
-  color: #000;
   width: 100%;
   margin-bottom: 16px;
-  display: -webkit-box;
+  white-space: nowrap;
+  text-overflow: ellipsis;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
+}
+
+.container--summaryComplete .nameContainer .brandName {
+  font-size: 20px;
 }
 
 .container--summaryComplete .buyButtonContainer,
@@ -136,7 +136,7 @@
   line-height: 16px;
   font-weight: 400;
   font-family: Roboto;
-  color: #717786;
+  color: var(--black-medium);
 }
 
 .currencyCode {
