--- a/styles/css/vtex.reviews-and-ratings.css
+++ b/styles/css/vtex.reviews-and-ratings.css
@@ -12,7 +12,7 @@
   display: flex;
   font-size: 12px;
   line-height: 16px;
-  color: #717786;
+  color: var(--black-medium);
   margin: 0;
   margin-bottom: 0.5rem;
 }
