--- a/styles/css/vtex.store.css
+++ b/styles/css/vtex.store.css
@@ -11,7 +11,7 @@
   --fresh-orange: #ff5f00;
   --fresh-darkest: #003364;
   --green-dark: #468a2e;
-  --black-medium: #717786;
+  --black-medium: #4A596B;
   --b2b-header-blue-medium: #fff;
   --blue-medium: #597298;
   --b2b-blue-darkest: #1b3255;
