--- a/styles/css/vtex.product-comparison.css
+++ b/styles/css/vtex.product-comparison.css
@@ -5,6 +5,7 @@
 .productSelectorContainer {
   opacity: 0;
   transition: all 0.3s ease;
+  margin-top: 0.5rem;
 }
 
 .productSelectorContainer :global(.vtex-checkbox__line-container) {
