--- a/styles/css/vtex.slider-layout.css
+++ b/styles/css/vtex.slider-layout.css
@@ -70,6 +70,7 @@
   height: 30px;
   color: var(--fresh-blue);
   border: var(--fresh-blue) solid 1px;
+  background-color: #fff!important;
 }
 
 .sliderArrows:local([disabled]) {
@@ -79,7 +80,8 @@
 
 .sliderArrows:active,
 .sliderArrows:hover,
-.sliderArrows:focus {
+.sliderArrows:focus,
+.sliderArrows:local([disabled]) {
   background-color: var(--lines-light) !important;
 }
 /* .sliderArrows--shelfAlsoView,
