--- a/styles/css/vtex.stack-layout.css
+++ b/styles/css/vtex.stack-layout.css
@@ -1,9 +1,5 @@
-.stackItem--savingsStack:not(.stackItem--first),
-.stackItem--savingsStack:not(:last-child) {
-  bottom: 10px;
-  top: initial;
-}
-
 .stackItem--savingsStack:last-child {
   top: 10px;
+  bottom: unset;
+  left: unset;
 }
