--- a/styles/css/vtex.wish-list.css
+++ b/styles/css/vtex.wish-list.css
@@ -1,13 +1,14 @@
 .wishlistIconContainer {
   position: absolute;
-  width: 38px;
-  height: 38px;
+  width: 25px;
+  height: 25px;
   display: block;
   border-radius: 50%;
-  background: #f3f9fe;
+  background: #fff;
   transition: all .3s ease;
-  opacity: 0;
+  opacity: 1;
   text-align: center;
+  right: 10px;
 }
 
 .wishlistIconContainer :global(.vtex-button):hover,
