--- a/styles/css/vtex.flex-layout.css
+++ b/styles/css/vtex.flex-layout.css
@@ -87,7 +87,7 @@
 
 .flexRow--minicart-footer {
   box-shadow: none;
-  border-top: 1px solid #dee7ef;
+  border-top: 1px solid var(--lines-light);
 }
 
 @media (max-width: 64rem) {
@@ -266,6 +266,10 @@
 
   .flexRow--paymentImages {
     margin-bottom: 24px;
+  }
+
+  .flexRow--disclosure-trigger-description-quickorder {
+    margin-bottom: 50px;
   }
 }
 
@@ -474,7 +478,7 @@
 @media (min-width: 64rem) {
   .flexCol--box {
     background-color: #fff;
-    border: 1px solid #dee7ef;
+    border: 1px solid var(--lines-light);
     border-radius: 4px;
     padding: 24px;
     width: 334px;
@@ -496,7 +500,7 @@
 
 .flexRowContent--location-availability::before {
   background-color: #f3f9ff;
-  background-image: url("data:image/svg+xml,%3Csvg width='26' height='22' viewBox='0 0 26 22' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17.3637 1H1V15.4443H17.3637V1Z' stroke='%230067C7' stroke-width='1.6' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M17.3638 6.55566H21.7274L25.0002 9.88896V15.4444H17.3638V6.55566Z' stroke='%230067C7' stroke-width='1.6' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M5.90893 20.9998C7.41516 20.9998 8.63621 19.7562 8.63621 18.2221C8.63621 16.688 7.41516 15.4443 5.90893 15.4443C4.40269 15.4443 3.18164 16.688 3.18164 18.2221C3.18164 19.7562 4.40269 20.9998 5.90893 20.9998Z' stroke='%230067C7' stroke-width='1.6' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M20.0911 20.9998C21.5973 20.9998 22.8183 19.7562 22.8183 18.2221C22.8183 16.688 21.5973 15.4443 20.0911 15.4443C18.5848 15.4443 17.3638 16.688 17.3638 18.2221C17.3638 19.7562 18.5848 20.9998 20.0911 20.9998Z' stroke='%230067C7' stroke-width='1.6' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+  background-image: url("data:image/svg+xml,%3Csvg width='26' height='22' viewBox='0 0 26 22' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17.3637 1H1V15.4443H17.3637V1Z' stroke='%23007f7f' stroke-width='1.6' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M17.3638 6.55566H21.7274L25.0002 9.88896V15.4444H17.3638V6.55566Z' stroke='%23007f7f' stroke-width='1.6' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M5.90893 20.9998C7.41516 20.9998 8.63621 19.7562 8.63621 18.2221C8.63621 16.688 7.41516 15.4443 5.90893 15.4443C4.40269 15.4443 3.18164 16.688 3.18164 18.2221C3.18164 19.7562 4.40269 20.9998 5.90893 20.9998Z' stroke='%23007f7f' stroke-width='1.6' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M20.0911 20.9998C21.5973 20.9998 22.8183 19.7562 22.8183 18.2221C22.8183 16.688 21.5973 15.4443 20.0911 15.4443C18.5848 15.4443 17.3638 16.688 17.3638 18.2221C17.3638 19.7562 18.5848 20.9998 20.0911 20.9998Z' stroke='%23007f7f' stroke-width='1.6' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
   background-position: center;
   background-repeat: no-repeat;
   background-size: auto;
@@ -529,7 +533,7 @@
 
 .flexRowContent--fake-summary {
   padding-bottom: 1rem;
-  border-bottom: 1px solid #dee7ef;
+  border-bottom: 1px solid var(--lines-light);
   margin-bottom: 1rem;
 }
 
@@ -623,7 +627,7 @@
 .flexCol--productBoxSellersPage {
   width: 216px;
   padding: 24px;
-  border: 1px solid #dee7ef;
+  border: 1px solid var(--lines-light);
   border-radius: 4px;
 }
 
