--- a/styles/css/vtex.sku-list.css
+++ b/styles/css/vtex.sku-list.css
@@ -4,7 +4,7 @@
   border-width: 0.0625rem;
   margin: 0 -0.5rem -0.0625rem;
   padding: 0.5rem 1rem;
-  border-color: unset;
+  border-color: var(--lines-light);
 }
 
 .skuContentWrapper:first-child {
