feat: b2b-user-widget on top menu, header mobile and quick order button updates

--- a/styles/css/vtex.category-menu.css
+++ b/styles/css/vtex.category-menu.css
@@ -2,6 +2,7 @@
   background-color: var(--fresh-blue);
   color: var(--base);
   border-radius: 6px;
+  margin-right: 15px;
 }
 
 @media (min-width: 768px) {
