--- a/styles/css/vtex.store-link.css
+++ b/styles/css/vtex.store-link.css
@@ -178,7 +178,7 @@
   display: flex;
   align-items: center;
   text-decoration: none;
-  color: var(--fresh-blue);
+  color: var(--base);
   height: 100%;
   font-weight: 500;
   font-size: 14px;
