--- a/styles/css/vtex.store-link.css
+++ b/styles/css/vtex.store-link.css
@@ -177,6 +177,7 @@
 .link--resellerLink {
   display: flex;
   align-items: center;
+  text-align: center;
   text-decoration: none;
   color: var(--base);
   height: 100%;
