--- a/styles/css/vtex.store-link.css
+++ b/styles/css/vtex.store-link.css
@@ -47,7 +47,7 @@
   justify-content: center;
   align-items: center;
   flex-flow: column nowrap;
-  max-width: 216px;
+  width: 216px;
   height: 196px;
   background: #fff;
   border-radius: 4px;
