feat: representative-area, improvements on last orders cards and correct simulationBehavior on search pages

--- a/styles/css/ssesandbox04.b2b-last-orders.css
+++ b/styles/css/ssesandbox04.b2b-last-orders.css
@@ -1,3 +1,4 @@
+/* b2b-last-orders */
 .orderDetails,
 .arrow {
   color: var(--fresh-blue);
@@ -5,4 +6,9 @@
 
 .popperArrow .container {
   border-color: var(--fresh-blue);
+}
+
+/* b2b-representative-area */
+.data {
+  color: var(--black-medium);
 }
