--- a/styles/css/vtex.overlay-layout.css
+++ b/styles/css/vtex.overlay-layout.css
@@ -4,6 +4,7 @@
 
 .popper--b2b-user-widget {
   left: 32px !important;
+  width: 262px;
 }
 
 @media (min-width: 1505px) {
@@ -19,7 +20,6 @@
   border-top-left-radius: 0;
   border-top-right-radius: 0;
   padding: 0;
-  border-width: 2px;
   border-top: none;
 }
 
@@ -29,9 +29,19 @@
   :global(.vtex-flex-layout-0-x-stretchChildrenWidth)
   :global(.vtex-flex-layout-0-x-flexCol--b2b-user-widget)
   :global(.vtex-flex-layout-0-x-flexColChild--b2b-user-widget) {
-  border-bottom: var(--b2b-blue-darkest) solid 2px;
+  border-bottom: var(--b2b-blue-darkest) solid 1px;
 }
 
+.container--b2b-user-widget :global(.vtex-styleguide-9-x-rotate) {
+  margin-left: 110px;
+}
+
+/* .container--b2b-user-widget
+  :global(.vtex-flex-layout-0-x-flexRow--b2b-user-widget)
+  :global(.vtex-flex-layout-0-x-flexRowContent--b2b-user-widget)
+  :global(.vtex-flex-layout-0-x-stretchChildrenWidth)
+  :global(.vtex-flex-layout-0-x-flexCol--b2b-user-widget)
+  :global(.vtex-flex-layout-0-x-flexColChild--b2b-user-widget):local(:nth-child(1)), */
 .container--b2b-user-widget
   :global(.vtex-flex-layout-0-x-flexRow--b2b-user-widget)
   :global(.vtex-flex-layout-0-x-flexRowContent--b2b-user-widget)
