feat: switch organizations and telemarketing support

--- a/styles/css/vtex.flex-layout.css
+++ b/styles/css/vtex.flex-layout.css
@@ -503,6 +503,10 @@
   padding-bottom: 1rem;
 }
 
+.flexCol--product-price {
+  height: 50px;
+}
+
 .flexRowContent--location-availability {
   align-items: center;
 }
