--- a/styles/css/vtex.b2b-organizations.css
+++ b/styles/css/vtex.b2b-organizations.css
@@ -1,15 +1,17 @@
 .userWidgetContainer {
   margin: 0;
   justify-content: center;
-  /* width: 135px; */
   height: 100%;
   background: transparent;
 }
-
+.userWidgetRow {
+  flex-direction: column;
+  background-color: var(--serious-black);
+}
+/*
 @media (max-width: 64rem) {
   .userWidgetContainer {
     font-size: 0.8rem;
-    /* width: 110px; */
   }
 }
 
@@ -40,4 +42,4 @@
 .userWidgetItem :global(.vtex-tag),
 .userWidgetButton {
   display: none;
-}
+} */
