--- a/styles/css/vtex.overlay-layout.css
+++ b/styles/css/vtex.overlay-layout.css
@@ -1,7 +1,7 @@
 .trigger {
   height: 100%;
 }
-
+/*
 .popper--b2b-user-widget {
   left: 32px !important;
   width: 262px;
@@ -11,18 +11,18 @@
   .popper--b2b-user-widget {
     left: 64px !important;
   }
-}
+}*/
 
 .container--b2b-user-widget {
-  background-color: var(--base);
-  border-color: var(--b2b-blue-darkest);
-  color: var(--b2b-blue-darkest);
+  background-color: var(--serious-black);
+  border-color: var(--serious-black);
+  color: var(--base);
   border-top-left-radius: 0;
   border-top-right-radius: 0;
   padding: 0;
   border-top: none;
 }
-
+/*
 .container--b2b-user-widget
   :global(.vtex-flex-layout-0-x-flexRow--b2b-user-widget)
   :global(.vtex-flex-layout-0-x-flexRowContent--b2b-user-widget)
@@ -32,12 +32,6 @@
   border-bottom: var(--b2b-blue-darkest) solid 1px;
 }
 
-/* .container--b2b-user-widget
-  :global(.vtex-flex-layout-0-x-flexRow--b2b-user-widget)
-  :global(.vtex-flex-layout-0-x-flexRowContent--b2b-user-widget)
-  :global(.vtex-flex-layout-0-x-stretchChildrenWidth)
-  :global(.vtex-flex-layout-0-x-flexCol--b2b-user-widget)
-  :global(.vtex-flex-layout-0-x-flexColChild--b2b-user-widget):local(:nth-child(1)), */
 .container--b2b-user-widget
   :global(.vtex-flex-layout-0-x-flexRow--b2b-user-widget)
   :global(.vtex-flex-layout-0-x-flexRowContent--b2b-user-widget)
@@ -59,4 +53,4 @@
 .container--b2b-user-widget :global(.vtex-store-link-0-x-link):hover {
   color: var(--base);
   background-color: var(--b2b-blue-darkest);
-}
+} */
